project was completed

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_RAPID_API_KEY=3946ff7f68msh5768979d88afb8bp1776adjsnc518430d3a1f
+REACT_APP_RAPID_API_KEY=9302e1c32cmsh28866aba42e01c5p144d52jsnf228215220eb
+# REACT_APP_RAPID_API_KEY=3946ff7f68msh5768979d88afb8bp1776adjsnc518430d3a1f
